Add Support for Google Gin in Catalog Finder Module. Refactoring Widget for Tabs TODO : Add Widget to manage Grid Pagination in Search Tab