@@ -212,7 +212,7 @@
                     <disableCastChecking>true</disableCastChecking>
                     <disableClassMetadata>true</disableClassMetadata>
                     <hostedWebapp>${basedir}/war</hostedWebapp>
-                    <extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
+                     <extraJvmArgs>-XX:MaxPermSize=766M -Xmx1024M -Xss1024k -Dgwt.nowarn.legacy.tools</extraJvmArgs>
                 </configuration>
                 <executions>
                     <execution>
